Update test.html for linking to htest2.html

--- a/test.html
+++ b/test.html
@@ -8,12 +8,15 @@
 <body>
     <h1 id="title">Welcome to My Test Page</h1>
     <p id="description">This is a test page for GitHub Pages.</p>
-    
+
     <!-- Button to increase the tally -->
     <button id="testButton">Click Me</button>
 
     <!-- Tally Display -->
     <p>Click count: <span id="clickCount">0</span></p>
+
+    <!-- Link to navigate to test2.html -->
+    <p><a href="test2.html">Go to Test Page 2</a></p>
 
     <script>
         let count = 0; // Initialize tally counter
