--- a/test2.html
+++ b/test2.html
@@ -10,6 +10,6 @@
     <p>This is the second test page linked from the main page.</p>
 
     <!-- Link to go back to the main page -->
-    <a href="index.html">Go Back to Home</a>
+    <a href="test.html">Go Back to Home</a>
 </body>
 </html>
