--- a/test2.html
+++ b/test2.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to Test Page 2</h1>
     <p>This is the second test page linked from the main page.</p>
-
+    <p>Why did you come here? There is nothing here.</p>
     <!-- Link to go back to the main page -->
     <a href="test.html">Go Back to Home</a>
 </body>
