--- a/test.html
+++ b/test.html
@@ -15,14 +15,18 @@
     <!-- Display the revealed digits of pi -->
     <p>π: <span id="piDisplay">3.</span></p>
 
+    <!-- Text field for user to enter Pi digits -->
+    <p>Test yourself: <input type="text" id="piInput" placeholder="..."></p>
+
     <!-- Link to navigate to test2.html -->
     <p><a href="test2.html">Go to Test Page 2</a></p>
 
     <script>
-        // Pre-stored 1 million digits of Pi (first few shown for brevity)
-        const piDigits = "14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460955058223172535940812848111745028410270193852110555964462294895493038196442881097566593344612847564823378678";
+        // Pre-stored 200 digits of Pi (first few shown for brevity)
+        const piDigits = "14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460955058223172535940812848111745028410270193852110555964462294895493038196";
 
         let revealedDigits = 0; // Track how many digits have been shown
+        let userProgress = ""; // Track user input
 
         function revealMorePi() {
             if (revealedDigits < piDigits.length) {
@@ -33,8 +37,25 @@
             }
         }
 
-        // Event Listener for Button Click
+        function checkPiInput(event) {
+            let inputField = document.getElementById("piInput");
+            let currentInput = inputField.value;
+
+            // Check if the input matches the stored Pi digits
+            if (currentInput === piDigits.substring(0, currentInput.length)) {
+                if (currentInput.length === piDigits.length) {
+                    inputField.replaceWith(document.createTextNode("Well done! You passed!"));
+                }
+            } else {
+                // Reset if incorrect
+                alert("Wrong digit! Start again.");
+                inputField.value = "";
+            }
+        }
+
+        // Event Listeners
         document.getElementById('testButton').addEventListener('click', revealMorePi);
+        document.getElementById('piInput').addEventListener('input', checkPiInput);
     </script>
 
 </body>
